methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:9: error: not found: value res
    res = (getCouleurSol()==Color.green)
    ^SlugTracking:11: error: not found: value res
    return res
           ^